@@ -119,6 +119,8 @@ class BlueboxConnection(ConnectionUserAndKey):
     secure = True
     responseCls = BlueboxResponse
 
+    allow_insecure = False
+
     def add_default_headers(self, headers):
         user_b64 = base64.b64encode(b('%s:%s' % (self.user_id, self.key)))
         headers['Authorization'] = 'Basic %s' % (user_b64)
